# realworld-back-python-aiohttp

./: .dockerignore  .env.default  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  ct.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: conduit.yml
.gitlab-ci/actions/: docker.yaml  helm.yaml  lint.yaml  nyx.yaml  pre-commit.yaml  review.yaml
.gitlab-ci/workflows/: commit.yaml  main.yaml  merge-request.yaml
conduit/: __main__.py  config.py  container.py
conduit/api/: auth.py  base.py  errors.py  healthcheck.py  middlewares.py  response.py
conduit/api/articles/: create.py  delete.py  favorite.py  feed.py  get.py  list.py  response.py  unfavorite.py  update.py
conduit/api/comments/: add_to_article.py  delete.py  get_from_article.py  response.py
conduit/api/profiles/: base.py  follow.py  get.py  response.py  unfollow.py
conduit/api/tags/: list.py
conduit/api/users/: __init__.py  get_current.py  response.py  sign_in.py  sign_up.py  update_current.py
conduit/core/entities/: article.py  comment.py  common.py  errors.py  profile.py  tag.py  unit_of_work.py  user.py
conduit/core/use_cases/: __init__.py  auth.py  base.py  common.py
conduit/core/use_cases/articles/: common.py  create.py  delete.py  favorite.py  feed.py  get.py  list.py  unfavorite.py  update.py
conduit/core/use_cases/comments/: add_to_article.py  delete.py  get_from_article.py
conduit/core/use_cases/profiles/: follow.py  get.py  get_profile.py  unfollow.py
conduit/core/use_cases/tags/: list.py
conduit/core/use_cases/users/: auth.py  get_current.py  get_current_user.py  sign_in.py  sign_up.py  update_current.py  update_current_user.py
conduit/db/: tables.py
conduit/impl/: article_repository.py  auth_token_generator.py  comment_repository.py  favorite_article_repository.py  follower_repository.py  password_hasher.py  tag_repository.py  unit_of_work.py  user_repository.py
docs/: 01-setup.md
helm/back/: Chart.yaml  review-values.yaml  values.yaml
helm/back/ci/: README.md  ingress-values.yaml  resources-values.yaml.desact
helm/back/templates/: configmap.yaml  deployment.yaml  hpa.yaml  secrets.yaml  serviceaccount.yaml
helm/back/templates/jobs/: migrations.yaml
helm/back/templates/tests/: test-connection.yaml
helm/scripts/: dep-build.sh
migrations/: alembic.ini  env.py  script.py.mako
migrations/versions/: 0001_add_user_table.py  0001_initial.py  0002_add_follower_table.py  0003_add_article_and_tag_tables.py  0004_add_comment_table.py
tests/e2e/: Conduit.postman_collection.json
tests/integration/: conftest.py  test_article_repository.py  test_comment_repository.py  test_favorite_article_repository.py  test_follower_repository.py  test_tag_repository.py  test_user_repository.py
tests/unit/: conftest.py
tests/unit/api/: conftest.py
tests/unit/api/articles/: conftest.py  test_create.py  test_delete.py  test_favorite.py  test_feed.py  test_get.py  test_list.py  test_unfavorite.py  test_update.py
tests/unit/api/comments/: conftest.py  test_add_to_article.py  test_delete.py  test_get_from_article.py
tests/unit/api/profiles/: test_follow.py  test_get.py  test_unfollow.py
tests/unit/api/tags/: test_list.py
tests/unit/api/users/: test_get_current.py  test_sign_in.py  test_sign_up.py  test_update_current.py
tests/unit/impl/: test_auth_token_generator.py  test_password_hasher.py
tests/unit/use_cases/articles/: test_create.py  test_delete.py  test_favorite.py  test_feed.py  test_get.py  test_list.py  test_unfavorite.py  test_update.py
tests/unit/use_cases/comments/: test_add_to_article.py  test_delete.py  test_get_from_article.py
tests/unit/use_cases/profiles/: conftest.py  test_follow.py  test_get.py  test_unfollow.py
tests/unit/use_cases/users/: test_get_current.py  test_sign_in.py  test_sign_up.py  test_update_current.py
